# Astat

./: .flake8  .gitignore  README.md  alembic.ini  ascents.db  ascents_import.csv  astat.db  astat.py  boulders_input.csv  buildozer.spec  database.py  database_local_management.py  main.py  pyproject.toml
database/: database.py  database_setup.py
kv/: addascent-screen.kv  addascent.kv  adding-area-screen.kv  adding-ascent-screen.kv  adding-screen.kv  area-screen.kv  ascent-list-screen.kv  ascent-screen.kv  barchart.kv  list-screen.kv  list.kv  location-screen.kv  screenmanager.kv  selector.kv  settings-screen.kv  statistic-filter-screen.kv  statistic-screen.kv  statistics.kv  to-do-list-screen.kv  todoclimb-screen.kv  todolist-add-screen.kv  todolist-detail-screen.kv  todolist-screen.kv
migrations/: env.py
migrations/versions/: 2c282135e834_initial_migration.py  3b4994652668_populate_grade_table.py  db33e18bf97f_adding_of_todolist_sector_and_climbtodo_.py
models/: area.py  ascent.py  base.py  climb_to_do.py  grade.py  sector.py  to_do_list.py  todoclimb.py  todolist.py
statistic/: plotmaker.py  queries.py
utils/: plotmaker.py
views/: addascent.py  adding.py  adding_area.py  adding_ascent.py  area.py  ascent.py  ascent_list.py  astat.py  barchart.py  list.py  location.py  pyramidgraph.py  screenmanager.py  selector.py  settings.py  snackbar.py  statistic_filter.py  statistics.py  statistics_filter.py  to_do_list.py  todoclimb.py  todolist.py  todolist_add.py  todolist_detail.py
